--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.clone(pwd()); Pkg.build("RobustPmap"); Pkg.test("RobustPmap"; coverage=true)';
 after_success:
-  - julia -e 'cd(Pkg.dir("RobustPmap")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+  - julia -e 'cd(Pkg.dir("RobustPmap")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder()); Codecov.submit(Codecov.process_folder())'
