--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ addons:
   apt:
     packages:
     - hdf5-tools
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("RobustPmap"); Pkg.test("RobustPmap"; coverage=true)';
+before_script:
+    - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; brew link --overwrite gcc; brew install hdf5; fi
+# script:
+#   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#   - julia -e 'Pkg.clone(pwd()); Pkg.build("RobustPmap"); Pkg.test("RobustPmap"; coverage=true)';
 after_success:
   - julia -e 'cd(Pkg.dir("RobustPmap")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder()); Codecov.submit(Codecov.process_folder())'
