--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "RobustPmap"
 uuid = "27aeedcb-f738-516b-a0b8-3211cf1146e5"
-version = "1.0.0"
+version = "1.0.1"
 
 [deps]
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
@@ -9,7 +9,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
 FileIO = "1"
-JLD2 = "0.2, 0.3"
+JLD2 = "0.2, 0.3, 0.4"
 julia = "1.5"
 
 [extras]
