--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 
 [compat]
 FileIO = "1"
-JLD2 = "0.4, 0.5, 1"
+JLD2 = "0.4, 0.5, 0.6, 1"
 julia = "1.10"
 
 [extras]
